<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="empty_field">Field is empty</string>
    <string name="email_format_error">Incorrect email format</string>
    <string name="password_too_short">Password is too short</string>
    <string name="account_was_not_initialized">Account was not initialized</string>
    <string name="account_information">Account information</string>
    <string name="app_design">Application design</string>
    <string name="dark_theme">Dark theme</string>
    <string name="settings">Settings</string>
    <string name="no_internet_warning">No Internet warning</string>
    <string name="liked_gifs_count">Liked gifs count</string>
    <string name="saved_gifs_count">Saved gifs count</string>
    <string name="exit_from_account">Exit from account</string>
    <string name="manager_settings">Manager settings</string>
    <string name="exit">Exit</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>
    <string name="change_photo">Change photo</string>
    <string name="account_was_not_found">Account was not found</string>

    <string name="return_back_button_description">Return to account fragment</string>
</resources>