<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginBottom="4dp"
            android:background="?attr/colorSurface"
            app:layout_collapseMode="pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/return_back_button_description"
                    android:src="@drawable/round_arrow_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:gravity="start|center_vertical"
                    android:lines="1"
                    android:text="@string/settings"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/infoCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            app:contentPadding="12dp"
            app:layout_constraintBottom_toTopOf="@id/designCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/accountInfoText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:lines="1"
                    android:text="@string/account_information"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/accountImage"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="12dp"
                    android:adjustViewBounds="true"
                    android:tint="@null"
                    app:layout_constraintBottom_toTopOf="@id/likedCountInfoText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/accountInfoText"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Gifmaster.ImageView.Circle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/changeAccountPhotoButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/change_photo"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="@id/accountImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/accountImage"
                    app:strokeColor="?attr/colorOnPrimary"
                    app:strokeWidth="1dp" />

                <TextView
                    android:id="@+id/likedCountInfoText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:lines="1"
                    android:paddingTop="24dp"
                    android:text="@string/liked_gifs_count"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@id/likedCountText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/accountImage" />

                <TextView
                    android:id="@+id/likedCountText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="end|center_vertical"
                    android:lines="1"
                    android:paddingTop="24dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/likedCountInfoText"
                    app:layout_constraintTop_toBottomOf="@id/accountImage" />

                <TextView
                    android:id="@+id/savedCountInfoText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:lines="1"
                    android:paddingTop="24dp"
                    android:paddingBottom="12dp"
                    android:text="@string/saved_gifs_count"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@id/savedCountText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/likedCountInfoText" />

                <TextView
                    android:id="@+id/savedCountText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="end|center_vertical"
                    android:lines="1"
                    android:paddingTop="24dp"
                    android:paddingBottom="12dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/savedCountInfoText"
                    app:layout_constraintTop_toBottomOf="@id/likedCountInfoText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/designCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            app:contentPadding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/designText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:lines="1"
                    android:text="@string/app_design"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/themeText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:text="@string/dark_theme"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@id/switchTheme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/designText" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="24dp"
                    app:layout_constraintBottom_toBottomOf="@id/themeText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/themeText"
                    app:layout_constraintTop_toTopOf="@id/themeText" />

                <TextView
                    android:id="@+id/noNetworkText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:text="@string/no_internet_warning"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@id/switchNoInternet"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/themeText" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchNoInternet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    app:layout_constraintBottom_toBottomOf="@id/noNetworkText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/noNetworkText"
                    app:layout_constraintTop_toTopOf="@id/noNetworkText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/accountManagerCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            app:contentPadding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/designCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/manageText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:lines="1"
                    android:text="@string/manager_settings"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/exitText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/exit_from_account"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/exitButton"
                    app:layout_constraintEnd_toStartOf="@id/exitButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/exitButton" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exitButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="4dp"
                    android:drawableEnd="@drawable/round_logout"
                    android:text="@string/exit"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toTopOf="@id/deleteButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/exitText"
                    app:layout_constraintTop_toBottomOf="@id/manageText"
                    app:strokeColor="@color/red"
                    app:strokeWidth="1dp" />

                <TextView
                    android:id="@+id/deleteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/deleteButton"
                    app:layout_constraintEnd_toStartOf="@id/deleteButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/deleteButton" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/deleteButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/deleteText"
                    app:layout_constraintTop_toBottomOf="@id/exitButton"
                    app:strokeWidth="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>